fixed buy/dl links size and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,9 @@
 		
 	}
 	
+	#mbm-book-page .mbm-book-buy-links-list, #mbm-book-page .mbm-book-download-links-list {
+		margin-left: 0;
+	}
  
 	
 #mbm-book-page .mbm-book-cover, #mbm-book-page .mbm-book-goodreads-image { 
@@ -85,11 +88,7 @@
 	}
 	*/
 
-	#mbm-book-links2  .mbm-book-buy-links-image {
-		width: 44%;
-		height: auto;
-	}
-	
+
 	
 	#mbm-book-page .mbm-book-editions-size,#mbm-book-page  .mbm-book-editions-srp {
 		display: inline;
@@ -205,6 +204,11 @@
 		box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 	}
 	
+	#mbm-book-links2  .mbm-book-buy-links-image {
+		width: 30%;
+		height: auto;
+	}
+	
 
 
 @media (max-width:640px) {
@@ -212,6 +216,12 @@
 		float: none;
 		width: 50%
 	}
+	
+		#mbm-book-links2  .mbm-book-buy-links-image {
+		width: 44%;
+		height: auto;
+	}
+	
 	
 	#mbm-book-links1 .mbm-book-buy-links, #mbm-book-links1 .mbm-book-download-links {
 		width: 90%
